# cosyne

./: .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  docker-compose.yml  flake.nix  shell.nix
src/: environment.rs  main.rs
src/commands/: mod.rs  ping.rs  register.rs  timezone.rs  update.rs
src/events/: mod.rs  ready.rs
src/types/: poise.rs
src/util/: logger.rs
