[package]
name = "cosyne"
version = "0.0.1"
authors = ["Mladen Brankovic <root@brankovic.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
regex = "1.5.4"

[dependencies.poise]
git = "https://github.com/kangalioo/poise"

# [dependencies.serenity]
# version = "0.10.9"
# default-features = false
# features = [
#   "client",
#   "cache",
#   "gateway",
#   "model",
#   "unstable_discord_api",
#   "rustls_backend",
# ]

[dependencies.tokio]
version = "1.12.0"
features = ["rt-multi-thread"]
