[package]
name = "cosyne"
version = "0.0.1"
authors = ["Mladen Brankovic <root@brankovic.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
dotenv = "0.15.0"
regex = "1.5.4"

[dependencies.tokio]
version = "1.12.0"
features = ["rt-multi-thread"]

[dependencies.poise]
git = "https://github.com/kangalioo/poise"
rev = "dddd56d6e23e9510a8bd81254d0a6a3e5be080e7"
